--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Great+Vibes&family=Nunito:wght@500;600&family=Poppins:wght@200;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Great+Vibes&family=Nunito:wght@500;600;700&family=Poppins:wght@200;300;400&display=swap');
 
 body{
     font-family: 'Nunito', sans-serif;
@@ -9,22 +9,38 @@ body{
 .header_section{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+}
+.hero_section{
+    height: 100vh;
 }
 .header_section >  h1{
     font-weight: 900;
 }
-.header_section > ul {
+.navs{
     display: flex;
-    align-items: center;
 }
-.header_section > ul li{
+.navs > li{
     list-style-type: none;
-    margin: 20px;
+    margin-left: 20px;
+    margin-top: 23px;
+    font-weight: bolder;
+    font-size: 18px;
 }
-.header_section > ul > li > a{
+.navs > li > a{
     text-decoration: none;
     color: black;
-    font-size: 18px;
+}
+/* hero */
+.img1 > img{
+    margin-top: -18vh;
+    z-index: -1;
+}
+.btn1{
+    background-color: #679DB9;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 15px;
     font-weight: bold;
+    font-size: 20px;
 }
