--- a/app/static/style.css
+++ b/app/static/style.css
@@ -36,11 +36,17 @@ body{
     z-index: -1;
 }
 .btn1{
-    background-color: #679DB9;
-    color: white;
-    border: none;
+    background-color: transparent;
+    border: 2px solid #679DB9;
+    color: black;
     padding: 10px;
-    border-radius: 15px;
+    margin-top: 10px;
+    border-radius: 25px;
     font-weight: bold;
     font-size: 20px;
+}
+.btn1:hover{
+    background-color: #679DB9;
+    transition: 1s;
+    color: white;
 }
