--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,36 @@
               </div>
           </div>
       </div>
+    </div>
+  </div>
+  <div class="blogs_section">
+      <div class="container">
+        <div class="blogs">
+            <h1 class="mt-5 mb-5" style="font-weight: bold;">Latest Blog Posts</h1>
+            <div class="row blogs">
+                <div class="col-4 blog">
+                    <div class="blog_head">
+                        <img class="img-fluid" src="../static/Images/portfolio.png" alt="image">
+                        <h5>Business</h5>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam reprehenderit dolorem placeat commodi sint doloremque.</p>
+                </div>
+                <div class="col-4 blog">
+                    <div class="blog_head">
+                        <img class="img-fluid" src="../static/Images/portfolio.png" alt="image">
+                        <h5>Business</h5>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam reprehenderit dolorem placeat commodi sint doloremque.</p>
+                </div>
+                <div class="col-4 blog">
+                    <div class="blog_head">
+                        <img class="img-fluid" src="../static/Images/portfolio.png" alt="image">
+                        <h5>Business</h5>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam reprehenderit dolorem placeat commodi sint doloremque.</p>
+                </div>
+            </div>
+        </div>
       </div>
   </div>
 {% endblock %}
