--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,7 +29,7 @@
       <div class="container">
         <div class="blogs">
             <h1 class="mt-5 mb-5" style="font-weight: bold;">Latest Blog Posts</h1>
-            <div class="row blogs">
+            <div class="row">
                 <div class="col-4 blog">
                     <div class="blog_head">
                         <img class="img-fluid" src="../static/Images/portfolio.png" alt="image">
