--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,5 +54,12 @@
             </div>
         </div>
       </div>
+      <footer>
+          <div class="container">
+            <h1>Blog</h1>
+            <p>@CopyRight AllRights Reserved</p>
+            <h1>2022</h1>
+          </div>
+      </footer>
   </div>
 {% endblock %}
