--- a/app/static/style.css
+++ b/app/static/style.css
@@ -73,6 +73,40 @@ footer{
     padding: 20px;
     margin-top: 20px;
 }
+/* signUp */
+.sign{
+    background: #C5E2F0;
+    height: 100vh;
+}
+.form{
+    background: #679DB9;
+    border-radius: 5px;
+    padding: 20px;
+    width: 40%;
+    margin: auto;
+}
+.form-control{
+    border-radius: 10px;
+    border: 1px solid gray;
+}
+.form-label{
+    margin-top: 10px;
+    color: white;
+}
+.btn2{
+    background: transparent;
+    height: 40px;
+    border: 2px solid #C5E2F0;
+    color: white;
+    border-radius: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.btn2:hover{
+    background: #C5E2F0;
+    color: black;
+    transition: 1s;
+}
 footer > div{
     display: flex;
     align-items: center;
