--- a/app/templates/signUp.html
+++ b/app/templates/signUp.html
@@ -2,32 +2,31 @@
 
 {% block content %}
 <div class="sign">
-    <h1>Blog</h1>
     <div class="container">
+        <a href="{{url_for('index')}}" style="text-decoration: none;color: black;font-size: 20px;margin-top: 5vh;">Home</a>
         <div class="row">
-            <div class="col-md-6">
-                <h2>SignUp</h2>
+            <div class="col-md-5 form">
+                <h3 class="text-white">SignUp</h3>
                 <form action="{{ url_for('register') }}" method="POST" class="form-register">
                     {{ form.hidden_tag() }}
 
-                    {{ form.username.label() }}
+                    {{ form.username.label(class='form-label') }}
                     {{ form.username(class='form-control',placeholder='User Name...') }}
 
-                    {{ form.email.label() }}
+                    {{ form.email.label(class='form-label') }}
                     {{ form.email(class='form-control',placeholder='Enter Email...') }}
 
-                    {{ form.password1.label() }}
+                    {{ form.password1.label(class='form-label') }}
                     {{ form.password1(class='form-control',placeholder='Password...') }}
 
-                    {{ form.password2.label() }}
+                    {{ form.password2.label(class='form-label') }}
                     {{ form.password2(class='form-control',placeholder='Confirm password...') }}
                     <br>
-                    <div class="checkbox mb-3" style="margin-left: 9vh;">
-                        <small>Already have an account?</small>
-                        <a href="{{ url_for('login') }}">Login</a>
+                    <div class="checkbox mb-3">
+                        <small class="text-white">Already have an account?</small>
+                        <a class="text-white"  href="{{ url_for('login') }}">Login</a>
                     </div>
-
-                    {{ form.submit(class="btn2 mt-3 mb-4", style="margin-left: 8vh;")}}
+                    {{ form.submit(class="btn2 mb-4", style="margin-left: 1vh")}}
                 </form>
             </div>
         </div>
