--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
 
     <title>Blog</title>
   </head>
-  <body>
+  <body style="background: #C5E2F0;">
       {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             {% for category,message in messages %}
