--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -12,10 +12,10 @@
                  </div>
                  <div class="col-4 text-center" style="width: 70%;margin: auto;">
                     <h4>Give a Comment</h4>
-                    <form action="{{ url_for('comments')}}" method="POST">
+                    <!-- <form action="/create_comment" method="POST">
                      <textarea name="comment" id="" cols="30" rows="5" class="form-control" placeholder="Write comment..." style="background: transparent;"></textarea>
-                     <button class="btn4 mt-2">Post Comment</button>
-                    </form>
+                     <button type="submit" class="btn4 mt-2">Post Comment</button>
+                    </form> -->
                 </div>
              </div>
              <div class="row text-center" style="margin-top: 7vh;background: #EEF0F4;padding: 15px;">
