--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
             <ul class="navs">
                 <li><a href="{{ url_for('register')}}">SignUp</a></li>
                 <li><a href="{{ url_for('login')}}">Login</a></li>
-                <li><a href="{{ url_for('profile')}}">Profile</a></li>
+                <li><a href="{{ url_for('profile')}}">Write Blog</a></li>
                 <li><a href="{{ url_for('logout') }}">Logout</a></li>
             </ul>
         </div>
@@ -37,9 +37,9 @@
         </div>
         <div class="blogs">
             <h1 class="mt-5 mb-5" style="font-weight: bold;">Latest Blog Posts</h1>
-            <div class="row">
+            <div class="row d-flex justify-content-between align-items-center" style="background: rgb(238,240,244);padding: 10px;">
                 {%for blog in blogs  %}
-               <div class="col-5 mt-3 home_blog">
+               <div class="col-6 mt-3 home_blog">
                 <h5 style="font-weight: bold;">{{ blog.title }}</h5>
                 <p>{{ blog.blogs }}</p>
                 <div class="collapse" id="comments-{{ blog.id }}">
